Changed title / working

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <h1>Percentage Calculators</h1>
+    <h1>Percentage Calculator</h1>
     <p>X is what % of Y?</p>
     <form id="xIsWhatPercentOfY">
 
